<resources>
    <string name="app_name">OrganizeMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newTaskPrompt">New task</string>
    <string name="newTaskBtn">Add task</string>
    <string name="action_new_task">New Task</string>
    <string name="action_search">Search</string>
	<string name="action_notifications">Add notification</string>
    <string name="task_desc_hint">Task description</string>
    <string name="task_date_hint">Date</string>
    <string name="task_time_hint">Time</string>
    <string name="task_new_title">New task</string>
    <string name="btn_create_task">CREATE</string>
    <string name="btn_dismiss_task">CANCEL</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="title_activity_categories">CategoriesActivity</string>
	<string name="task_edit">Edit</string>
	<string name="task_delete">Delete</string>
	<string name="task_notif">Add notification</string>
    <string name="title_activity_edit_task">Edit Task</string>
	<string name="unassigned_category_name">Unassigned</string>
	<string name="uncategorized">Uncategorized</string>
	<string name="drawer_open">Open menu</string>
	<string name="drawer_close">Close menu</string>
    <string name="task_done">Done</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_default_username">Matthew M.</string>
    <string name="drawer_tasks_done">tasks done</string>
    <string name="drawer_tasks_today">0 tasks today</string>
    <string name="drawer_tasks_future">0 tasks in future</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
