<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TasksActivity">
    <item
        android:id="@+id/action_new_task"
        android:title="@string/action_new_task"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_new"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notifications"
        android:title="@string/action_notifications"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
