<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/task_new_title"
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_desc_hint"
        android:id="@+id/task_desc"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_date_hint"
        android:editable="false"
        android:id="@+id/task_date"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="CREATE"
        android:id="@+id/create_new_task"
        style="@style/Widget.AppCompat.ActionButton" />
</LinearLayout>
