<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:padding="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_desc_hint"
            android:maxLength="40"
            android:layout_marginLeft="36dp"
            android:id="@+id/task_desc"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_schedule"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="4dp"
            android:id="@+id/icon_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:id="@+id/label_date"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:paddingLeft="8dp"
            android:layout_toRightOf="@id/icon_date"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_date_hint"
            android:editable="false"
            android:layout_toRightOf="@id/icon_date"
            android:layout_marginLeft="4dp"
            android:layout_below="@id/label_date"
            android:id="@+id/task_date"
            android:layout_toLeftOf="@+id/task_time"
            android:layout_toStartOf="@+id/task_time" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_time_hint"
            android:editable="false"
            android:id="@+id/task_time"
            android:layout_alignTop="@+id/task_date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TIME"
            android:id="@+id/label_time"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:paddingLeft="4dp"
            android:layout_above="@+id/task_date"
            android:layout_toRightOf="@+id/task_date"
            android:layout_toEndOf="@+id/task_date" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_label"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="24dp"
            android:layout_marginRight="4dp"
            android:id="@+id/icon_category"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:id="@+id/label_category"
            android:text="CATEGORY"
            android:layout_toRightOf="@id/icon_category"
            style="@style/Base.TextAppearance.AppCompat.Caption"/>
        <Spinner
            android:id="@+id/category"
            android:layout_toRightOf="@id/icon_category"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_category"
            />
    </RelativeLayout>
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/accent"
        fab:fab_size="normal"
        fab:fab_icon="@drawable/ic_done"
        android:id="@+id/create_new_task"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="right" />
</LinearLayout>
