<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="@color/primary"
        android:padding="10dp">

        <EditText
            android:id="@+id/task_desc"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:hint="@string/task_desc_hint"
            android:maxLength="40"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/task_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_schedule" />

                <TextView
                    android:id="@+id/label_date"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_date"
                    android:paddingLeft="8dp"
                    android:text="DATE" />

                <EditText
                    android:id="@+id/task_date"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_date"
                    android:layout_marginLeft="4dp"
                    android:layout_toLeftOf="@+id/task_time"
                    android:layout_toRightOf="@id/icon_date"
                    android:layout_toStartOf="@+id/task_time"
                    android:editable="false"
                    android:hint="@string/task_date_hint" />

                <EditText
                    android:id="@+id/task_time"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/task_date"
                    android:editable="false"
                    android:hint="@string/task_time_hint" />

                <TextView
                    android:id="@+id/label_time"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/task_date"
                    android:layout_toEndOf="@+id/task_date"
                    android:layout_toRightOf="@+id/task_date"
                    android:paddingLeft="4dp"
                    android:text="TIME" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_category"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_label" />

                <TextView
                    android:id="@+id/label_category"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_category"
                    android:paddingLeft="8dp"
                    android:text="CATEGORY" />

                <Spinner
                    android:id="@+id/category"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_category"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/icon_category" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_labels"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_label" />

                <TextView
                    android:id="@+id/label_labels"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_labels"
                    android:paddingLeft="8dp"
                    android:text="LABELS" />

                <pl.piotrstaniow.organizeme.Models.LabelsCompletionView
                    android:id="@+id/searchView"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_labels"
                    android:layout_toRightOf="@id/icon_labels"
                    android:focusableInTouchMode="true"
                    android:hint="Label"
                    android:imeOptions="actionDone"
                    android:inputType="text|textNoSuggestions|textMultiLine"
                    android:nextFocusDown="@+id/editText"
                    android:paddingLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="19sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:id="@+id/label_location"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_location"
                    android:paddingLeft="8dp"
                    android:text="LOCATION" />

                <EditText
                    android:id="@+id/task_location"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_location"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/icon_location"
                    android:editable="false"
                    android:focusable="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_location_precision"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:id="@+id/label_location_precision"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_location_precision"
                    android:paddingLeft="8dp"
                    android:text="LOCATION PRECISION" />

                <NumberPicker
                    android:id="@+id/task_location_precision"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_location_precision"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/icon_location_precision" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/icon_location_notify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_notif" />

                <CheckBox android:id="@+id/task_location_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_location_notify"
                    android:paddingLeft="8dp"
                    android:text="NOTIFY IN THE NEARBY"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/task_data"
        android:layout_below="@id/toolbar"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-32dp"
        android:translationZ="5dp"
        fab:fab_colorNormal="@color/accent"
        fab:fab_icon="@drawable/ic_done"
        fab:fab_size="normal" />
</RelativeLayout>